# ML-Intrusion-Detection-System

./: .env.example  .gitignore  LICENSE  pyproject.toml  requirements.txt
backend/: run.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: health.py
docs/: API.md  Architecture.md  Dataset.md  Deployment.md
frontend/: README.md  metadata.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AnalyticsView.tsx  DashboardView.tsx  Header.tsx  LiveMonitoringView.tsx  LogsView.tsx  ModelPerformanceView.tsx  SettingsView.tsx  Sidebar.tsx  ThreatIntelView.tsx
frontend/src/data/: mockData.ts
ml/notebooks/: 01_dataset_analysis.ipynb
scripts/: download_nsl_kdd.py  run_eda.py
tests/: test_health.py
