[project]
name = "ml-intrusion-detection-system"
version = "0.1.0"
description = "Enterprise-grade Machine Learning Intrusion Detection System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ML-Intrusion-Detection-System Contributors"}
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), pep8-naming (N), flake8-bugbear (B), pyupgrade (UP)
select = ["F", "E", "W", "I", "N", "B", "UP", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
    "ml/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
